--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : "Sightless.fun"
 title_separator          : "|"
 name                     : "Sightless Fun"
 description              : "Sightless Fun is all about visual accessibility in Board Games. We share creative solutions to make Board Games accessible to the blind and visually impaired."
-url                      : "https://sightless.fun" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : /minimal-mistakes/ # the subpath of your site, e.g. "/blog"
+url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
