--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,13 @@
 # main links
 main:
-  - title: "Home"
-    url: /
-   - title: "Categories"
-     url: /categories/
-   - title: "About"
-     url: /about/
+  - title: "Quick-Start Guide"
+    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "Categories"
+    url: /categories/
+  - title: "About"
+    url: /about/
+  # - title: "About"
+  #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
