--- a/_config.yml
+++ b/_config.yml
@@ -270,6 +270,7 @@ defaults:
       share: true
       related: true
       toc: true
+      newsletter: true
   # _pages
   - scope:
       path: "_pages"
@@ -277,3 +278,4 @@ defaults:
     values:
       layout: single
       author_profile: false
+      newsletter: false
