--- a/_config.yml
+++ b/_config.yml
@@ -77,18 +77,19 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : ertaysh
+  username               : SightlessFun
 facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : # Open Graph/Twitter default site image
+og_image                 : /assets/images/sightless-logo.png # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
   type                   : Organization # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  links: 
+    - "https://twitter.com/SightlessFun/"
 
 # Analytics
 analytics:
